Fix for #400. Also added some minor padding for blocks as blocks were appearing too close to the border of the container and did not lookgreat when using different background colours to the block. Also mostly fixes #435.

--- a/style/blocks.css
+++ b/style/blocks.css
@@ -614,6 +614,7 @@ main.tabcontentcontainer {
   min-height: 400px;
   padding: 0;
   background: #fff;
+  margin: 5px 0;
 }
 
 #dashboardtabcontainer section.adaptable-tab-section {
